# TickTock_Tribe

./: .gitignore  LICENSE  README.md  app.py  c_world_generator.py  config.toml  generator.c  main.py  pyproject.toml  pyrightconfig.json  run.sh  test_frontend.py  test_villager_system.py  world_generator.py
Game_Mechanics/: Game_Mechanics.md  游戏机制设计.md
core/: config.py  database.py  debug_updater.py  ticker.py  villager_ai.py  villager_manager.py  world.py  world_updater.py
docs/: Game_Mechanics.md  README.en.md  村民系统设计.md  游戏机制设计.md
generator/: c_world_generator.py  generator.cpp
static/: main.js  map-viewer.js
static/css/: style.css
static/js/: main.js  map-viewer.js
templates/: index.html  map.html
